gnb overflow적용, footer fixed 적용

--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -1,11 +1,12 @@
 .footer {
-  position: sticky;
+  position: fixed;
   bottom: 0;
   left: 0;
   padding: 3px 0;
   width: 100%;
   height: 50px;
   box-shadow: 0 0 15px 0 rgba(0, 0, 0, 0.08);
+  background-color: #ffffff;
 }
 
 .footer .footer_inner {
